Bug 337101 - weird behavior when using Graphics tablet and two monitors.
Summary: weird behavior when using Graphics tablet and two monitors.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tablets (tablet issues are only very rarely bugs in Krita!) (other bugs)
Version First Reported In: 2.8.3
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-05 07:48 UTC by buritho
Modified: 2014-07-18 12:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description buritho 2014-07-05 07:48:18 UTC
When the Cursor enters the Canvas field, the Tablet behaves as if it's mapped across BOTH Screen even if it's mapped ONLY to Monitor 1(upon leaving the Canvas area and entering the menu area the region is completely normal.

The Tablet is functional and works with other software like photoshop, paint etc.

Reproducible: Always

Steps to Reproduce:
1.start Krita
2.open a document
3. use graphics tablet to move cursor into the canvas zone.



I'm using:
GeneralKeys Tables Model PX-8180-675
Windows 7
Krita v2.8.3 64bit
Comment 1 buritho 2014-07-05 20:15:08 UTC
Im using a monitor connected with a HDMI cable as my primary monitor and a second one with vga using a DVI Adapter.
After disabling the second monitor the program works perfectly fine.
Comment 2 Halla Rempt 2014-07-15 15:10:25 UTC
Hi!

I've just got two Yiynova monitor tablets and I can reproduce the issue and am working on a fix.
Comment 3 Halla Rempt 2014-07-18 12:40:10 UTC
Git commit 37e3850a5a7746868dd56f09ff3166100d2eca49 by Boudewijn Rempt.
Committed on 18/07/2014 at 12:36.
Pushed by rempt into branch 'master'.

Fix desktop area calculation.

New build: http://heap.kogmbh.com/downloads/krita_x64_2.8.79.13.msi

M  +1    -0    krita/ui/input/wintab/kis_tablet_support.h
M  +13   -12   krita/ui/input/wintab/kis_tablet_support_win.cpp

http://commits.kde.org/calligra/37e3850a5a7746868dd56f09ff3166100d2eca49
Comment 4 Halla Rempt 2014-07-18 12:51:50 UTC
Make that...

http://heap.kogmbh.net/downloads/krita_x64_2.8.79.13.msi

:-)