Fix desktop area calculation.

BUG:337101

New build: http://heap.kogmbh.com/downloads/krita_x64_2.8.79.13.msi